buttons mods ands add the pay-table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
   <!-- main -->
   <main>
+
+    <div class="pay-table-container">
+      <button class="pay-table-btn">PAY TABLE</button>
+      <img class="pay-table-image" src="./images/pay-table.png" alt="A REMPLIIIIIIIRRRRRR">
+    </div>
+
+
     <div class="page-container wrapper">
       <div class="image-container">
         <img id="random-image-1" src="./images/play.jpg" />
@@ -38,15 +45,13 @@
     </div>
 
     <div class="welcome wrapper">
-      <img src="./images/welcome.gif" alt="">
+      <img class="welcome-image" src="./images/welcome.gif" alt="">
     </div>
     
     <div class="score-container wrapper">
-      <div class="btn-round-container"></div>
-      <div>
-        <button class="btn-credits"></button>
-      </div>
-      <div class="btn-paid-container"></div>
+      <p class="btn-round-container"></p>
+      <p class="btn-credits"></p>
+      <p class="btn-paid-container"></p>
     </div>
   </main>
 
