audio on/off button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <div class="pay-table-container">
       <button class="pay-table-btn">PAY TABLE</button>
+      <button class="volume-on"><i class="fas fa-volume-up"></i></button>
+      <button class="volume-off"><i class="fas fa-volume-mute"></i></button>
       <img class="pay-table-image" src="./images/pay-table.png" alt="A REMPLIIIIIIIRRRRRR">
     </div>
 
