score board mods

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- main -->
   <main>
 
-    <div class="pay-table-container">
+    <div class="pay-table-container wrapper">
       <button class="pay-table-btn">PAY TABLE</button>
       <button class="volume-on"><i class="fas fa-volume-up"></i></button>
       <button class="volume-off"><i class="fas fa-volume-mute"></i></button>
@@ -51,9 +51,9 @@
     </div>
     
     <div class="score-container wrapper">
-      <p class="btn-round-container"></p>
-      <p class="btn-credits"></p>
-      <p class="btn-paid-container"></p>
+      <div class="btn-round-container"></div>
+      <div class="btn-credits"></div>
+      <div class="btn-paid-container"></div>
     </div>
   </main>
 
