--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
     <div class="welcome wrapper">
       <img class="welcome-image" src="./images/welcome.gif" alt="">
+
+      <button class="start">START PLAYING</button>
     </div>
     
     <div class="score-container wrapper">
