typo & welcome gif

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
   <!-- header -->
   <header>
-    <h1 class="wrapper">
-      &lt;!-- THE WEB DEV SLOT MACHINE --&gt;
-    </h1>
+    <div class="wrapper">
+      <h1>
+        &lt;!-- <span>T</span>HE  <span>W</span>EB.<span>D</span>EV  <span>S</span>LOT <span>M</span>ACHINE --&gt;
+      </h1>
+    </div>
+    
   </header>
 
   <!-- main -->
@@ -47,7 +50,6 @@
 
     <div class="welcome wrapper">
       <img class="welcome-image" src="./images/welcome.gif" alt="">
-
       <button class="start">START PLAYING</button>
     </div>
 
