pay-table mods + resizing(footer)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button class="pay-table-btn">PAY TABLE</button>
       <button class="volume-on"><i class="fas fa-volume-up"></i></button>
       <button class="volume-off"><i class="fas fa-volume-mute"></i></button>
-      <img class="pay-table-image" src="./images/pay-table.png" alt="A REMPLIIIIIIIRRRRRR">
+      <img class="pay-table-image" src="./images/pay-table.jpg" alt="A REMPLIIIIIIIRRRRRR">
     </div>
 
     <div class="page-container wrapper">
