js optimzing & images attributes

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
       <button class="pay-table-btn">PAY TABLE</button>
       <button class="volume-on"><i class="fas fa-volume-up"></i></button>
       <button class="volume-off"><i class="fas fa-volume-mute"></i></button>
-      <img class="pay-table-image" src="./images/pay-table.jpg" alt="A REMPLIIIIIIIRRRRRR">
+      <img class="pay-table-image" src="./images/pay-table.jpg" alt="the slot machine pay table">
     </div>
 
     <div class="page-container wrapper">
       <div class="image-container">
-        <img id="random-image-1" src="./images/play.jpg" />
+        <img id="random-image-1" src="./images/play.jpg" alt="slot machine first reel image"/>
       </div>
       <div class="image-container">
-        <img id="random-image-2" src="./images/play.jpg" />
+        <img id="random-image-2" src="./images/play.jpg" alt="slot machine second reel image"/>
       </div>
       <div class="image-container">
-        <img id="random-image-3" src="./images/play.jpg" />
+        <img id="random-image-3" src="./images/play.jpg" alt="slot machine third reel image"/>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
     </div>
 
     <div class="welcome wrapper">
-      <img class="welcome-image" src="./images/welcome.gif" alt="">
+      <img class="welcome-image" src="./images/welcome.gif" alt="welcome to the web.dev slot machine">
       <button class="start">START PLAYING</button>
     </div>
 
