pay-table & volume btn mods

--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
 
     <div class="pay-table-container wrapper">
       <button class="pay-table-btn">PAY TABLE</button>
-      <button class="volume-on"><i class="fas fa-volume-up"></i></button>
-      <button class="volume-off"><i class="fas fa-volume-mute"></i></button>
+      <button class="volume-on">
+        <i class="fas fa-volume-up"></i>
+        <span class="sr-only">turn the volume off</span>
+      </button>
+      <button class="volume-off">
+        <i class="fas fa-volume-mute"></i>
+        <span class="sr-only">turn the volume on</span>
+      </button>
       <img class="pay-table-image" src="./images/pay-table.jpg" alt="the slot machine pay table">
     </div>
 
