score-container mods

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="wrapper">
       <h1>
-        &lt;!-- <span>T</span>HE <span>W</span>EB.<span>D</span>EV <span>                                                        S</span>LOT <span>M</span>ACHINE --&gt;
+        &lt;!-- <span>T</span>HE <span>W</span>EB.<span>D</span>EV <span>S</span>LOT <span>M</span>ACHINE --&gt;
       </h1>
     </div>
 
@@ -60,9 +60,9 @@
     </div>
 
     <div class="score-container wrapper">
-      <div class="btn-round-container"></div>
-      <div class="btn-credits"></div>
-      <div class="btn-paid-container"></div>
+      <div class="score-round-container"></div>
+      <div class="score-credits"></div>
+      <div class="score-paid-container"></div>
     </div>
   </main>
 
