--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/28cb818fe9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" type="image/png" href="./images/icon.png" />
 </head>
 
 <body>
