--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- main -->
   <main>
-
+    <!-- pay table and sound volume control -->
     <div class="pay-table-container wrapper">
       <button class="pay-table-btn">PAY TABLE</button>
       <button class="volume-on">
@@ -38,6 +38,7 @@
       <img class="pay-table-image" src="./images/pay-table.jpg" alt="the slot machine pay table">
     </div>
 
+    <!-- reels -->
     <div class="page-container wrapper">
       <div class="image-container">
         <img id="random-image-1" src="./images/play.jpg" alt="slot machine first reel image" />
@@ -50,16 +51,19 @@
       </div>
     </div>
 
+    <!-- buttons container -->
     <div class="buttons-container wrapper">
       <button class="btn-play">SPIN REELS</button>
       <button class="btn-stop">STOP</button>
     </div>
 
+    <!-- welcome display infos -->
     <div class="welcome wrapper">
       <img class="welcome-image" src="./images/welcome.gif" alt="welcome to the web.dev slot machine">
       <button class="start">START PLAYING</button>
     </div>
 
+    <!-- score board -->
     <div class="score-container wrapper">
       <div class="score-round-container"></div>
       <div class="score-credits"></div>
