juno link added to the footer

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
   <!-- footer -->
   <footer>
     <p>Raphael Roques © copyright 2020</p>
+    <p>Created at <a href="https://junocollege.com/">Juno College</a></p>
+    
   </footer>
 
   <!-- scripts -->
