reels container ajustt

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- reels -->
-    <div class="page-container wrapper">
+    <div class="reels-container wrapper">
       <div class="image-container">
         <img id="random-image-1" src="./images/play.jpg" alt="slot machine first reel image" />
       </div>
