--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <!-- reels -->
     <div class="reels-container wrapper">
       <div class="image-container">
-        <img id="random-image-1" src="./images/play.jpg" alt="slot machine first reel image" />
+        <img id="random-image-1" src="./images/image9.jpg" alt="slot machine first reel image" />
       </div>
       <div class="image-container">
-        <img id="random-image-2" src="./images/play.jpg" alt="slot machine second reel image" />
+        <img id="random-image-2" src="./images/image9.jpg" alt="slot machine second reel image" />
       </div>
       <div class="image-container">
-        <img id="random-image-3" src="./images/play.jpg" alt="slot machine third reel image" />
+        <img id="random-image-3" src="./images/image9.jpg" alt="slot machine third reel image" />
       </div>
     </div>
 
