--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- footer -->
   <footer>
     <p>Raphael Roques © copyright 2020</p>
-    <p>Created at <a href="https://junocollege.com/">Juno College</a></p>
+    <p>Created at <a href="https://junocollege.com/" target="_blank">Juno College</a></p>
     
   </footer>
 
